<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="70dip">
    
    <TableLayout
		android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
    	android:paddingLeft="20dip">
	    
	    <TableRow
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
	    	<ImageView 
				android:id="@+id/icono_fitxer"
				android:src="@drawable/icon_local"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"/>
			    
			<TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/inici_fitxer"
	            android:id="@+id/inici_fitxer"
	            android:paddingTop="5dip"
	            android:layout_marginBottom="50dip" 
	            android:textSize="20dip"/>
	    </TableRow>
	    
	    <TableRow
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
	    	<ImageView 
				android:id="@+id/icono_url"
				android:src="@drawable/icon_url"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"/>
			    
			<TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/inici_URL"
	            android:id="@+id/inici_URL"
	            android:paddingTop="5dip"
	            android:layout_marginBottom="50dip"
	            android:textSize="20dip"/>
	    </TableRow>
	    
	    <TableRow
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
	    	<ImageView 
				android:id="@+id/icono_exemple"
				android:src="@drawable/icon_example"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dip"/>
			    
			<TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/inici_exemple"
	            android:id="@+id/inici_exemple"
	            android:paddingTop="5dip"
	            android:layout_marginBottom="50dip" 
	            android:textSize="20dip"/>
	    </TableRow>
	</TableLayout>
	
	<TableLayout 
		android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
    	android:paddingLeft="30dip">
	    <TableRow
	    	android:orientation="vertical"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="30dip">
			
	    	<ImageView 
				android:id="@+id/babout"
				android:src="@drawable/icon_about"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="30dip"/>
			    
			<ImageView 
				android:id="@+id/bsortir"
				android:src="@drawable/icon_sortir"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="110dip"/>
	    </TableRow>
	    
	    <TableRow
	    	android:orientation="vertical"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="5dip">
			
	    	<TextView 
				android:id="@+id/tabout"
				android:text="Sobre"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="23dip"
	            android:textSize="20dip"/>
			    
			<TextView 
				android:id="@+id/tsortir"
				android:text="Sortir"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="105dip"
	            android:textSize="20dip"/>
	            
	    </TableRow>
	</TableLayout>
</LinearLayout>